# quill-platform

./: .env.example  .firebaserc  .gitignore  ADK_AGENTS_DESIGN.md  CONTINUOUS_TRIAGE_SPEC.md  CONTINUOUS_TRIAGE_VERIFICATION.md  CONTRIBUTING_AGENTS.md  COST_SCHEDULE_SPEC.md  DELIVERABLES_AUDIT.md  DEV_CHAT_LOG.md  Dockerfile  GAP_ASSESSMENT_S9.md  KNOWN_ISSUES.md  MODULAR_FRAMEWORK_DESIGN.md  Makefile  PROJECT-LIFECYCLE.md  README.md  cloudbuild.yaml  docker-compose.yml  firebase.json  pyproject.toml
mock-data/: README.md  calendar.json  cli.py  example_seed_data.md  pyproject.toml
mock-data/quill_mock_data/: __init__.py  cli.py  dispatcher.py  project.py  scheduler.py  seed.py
mock-data/quill_mock_data/feeders/: __init__.py  dfr.py  hyperscaler.py  procurement.py  rfi.py  submittal.py
mock-data/quill_mock_data/templates/: dfr_narrative.j2  rfi_body.j2  vendor_email.j2
mock-data/tests/: test_dispatcher.py  test_feeders.py  test_seed.py
my-agent-lab/: Makefile  evaluation.test.json  pyproject.toml
my-agent-lab/root_agent/: agent.py  input_schema.py  instruction.md
my-agent-lab/schemas/: aace_classification.schema.json
my-agent-lab/sub_agents/: __init__.py
my-agent-lab/sub_agents/ccb_prep/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/co_estimator/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/comms_drafter/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/compliance/: agent.py  input_schema.py  instruction.md  tools.py
my-agent-lab/sub_agents/contract_drafter/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/contract_extractor/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/contract_interpreter/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/contract_reviewer/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/coordinator/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/critical_path_watch/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/customer_success/: agent.py  input_schema.py  instruction.md  tools.py
my-agent-lab/sub_agents/daily_brief/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/design_classifier/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/dfr_synthesizer/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/estimator_scheduler/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/facility_ops/: agent.py  input_schema.py  instruction.md  tools.py
my-agent-lab/sub_agents/finance/: agent.py  input_schema.py  instruction.md  tools.py
my-agent-lab/sub_agents/intelligence/: agent.py  input_schema.py  instruction.md  tools.py
my-agent-lab/sub_agents/knowledge_manager/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/owner_reporting/: agent.py  input_schema.py  instruction.md  output_schema.py
my-agent-lab/sub_agents/procurement_watch/: agent.py  input_schema.py  (+2 more)
my-agent-lab/tools/: __init__.py  blob_storage.py  drive_search.py  image_analysis.py  quill_api.py  schedule_parser.py
runtime/: README.md  pyproject.toml
runtime/runtime/: MODEL_ROUTING_CONTRACT.md  __init__.py  agent.py  agent_loader.py  chains.py  classification_dispatcher.py  cli.py  config.py  contract_dispatcher.py  contract_draft_dispatcher.py  contract_review_dispatcher.py  dev_chat_worker.py  estimator_dispatcher.py  eval_harness.py  hashing.py  json_extractor.py  lane_router.py  llm_client.py  local_llm_client.py  local_warmup_daemon.py  model_router.py  openclaw_bridge.py  output_normalizer.py  queue_client.py  redeploy_watcher.py  state_store.py  transcription.py  triage_dispatcher.py  validator.py
runtime/scripts/: daily_brief_pipeline.py  replay_synthetic.py  replay_week.py  smoke_local_routing.py
runtime/tests/: conftest.py  test_agent.py  test_agent_loader.py  test_chain_overlay.py  test_chains.py  test_classification_dispatcher.py  test_contract_dispatcher.py  test_contract_draft_dispatcher.py  test_contract_review_dispatcher.py  test_dev_chat_worker.py  test_estimator_dispatcher.py  test_hashing.py  test_json_extractor.py  test_lane_router.py  test_llm_cache.py  test_local_llm_client.py  test_model_router.py  test_output_normalizer.py  test_queue_client.py  test_sentry.py  test_state_store.py  test_transcription.py  test_triage_dispatcher.py  test_triage_integration.py  test_trust_tier_normalize.py  test_validator.py  test_webhook_source.py
telegram-bot/: CONVERSATIONAL_SPEC.md  Dockerfile  KNOWN_ISSUES.md  README.md  VOICE_NOTES_SPEC.md  pyproject.toml
telegram-bot/quill_bot/: __init__.py  api_client.py  bot.py  config.py  conversation.py  dedup.py  deeplink.py  llm.py  notifier.py  pairing.py  scheduler.py  sentry.py  tools.py  transcription.py
telegram-bot/scripts/: verify_prod.py
telegram-bot/tests/: conftest.py  test_api_client_estimates.py  test_cli.py  test_conversation.py  test_dedup.py  test_deeplink.py  test_handlers.py  test_heartbeat_retry.py  test_llm_loop.py  test_nl_handler.py  test_notifier.py  test_pairing.py  test_pairing_oneshot.py  test_scheduler.py  test_scheduler_hardening.py  test_tools_estimates.py  test_tools_executors.py  test_tools_schema.py  test_transcription.py  test_voice_handler.py
(+651 files in other folders)
