[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quill-platform-api"
version = "0.1.0"
description = "Quill Platform — Approval Queue API for the Agentic PMO"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Charles Mitchell" }]
dependencies = [
    "fastapi>=0.110",
    "slowapi>=0.1.9",  # Sprint 5.3 — per-route rate limiting
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pgvector>=0.2.5",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "webauthn>=2.0",
    "websockets>=12.0",
    "httpx>=0.26",
    "python-dotenv>=1.0",
    "sentry-sdk[fastapi]>=1.40",
    "aiosqlite>=0.19",
    "b2sdk>=2.0",
    # Phase G.1 — drawing extraction (PDF / IFC / DXF). DWG / RVT deferred.
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11",
    "pypdfium2>=4.30",
    "ifcopenshell>=0.7",
    "ezdxf>=1.3",
    "google-auth>=2.28",
    "google-cloud-tasks>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "httpx>=0.26",
]

[tool.setuptools]
package-dir = { "" = "api" }

[tool.setuptools.packages.find]
where = ["api"]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["api/alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "UP042"]  # UP042: StrEnum recommendation, prefer explicit base classes.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests"]
pythonpath = ["api"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
