[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quill-mock-data"
version = "0.1.0"
description = "Quill Platform — synthetic data sources for QPB1 hyperscale data center build"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Charles Mitchell" }]
dependencies = [
    "faker>=24.0",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "httpx>=0.26",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "lxml>=5.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.20",
]

[project.scripts]
quill-mock = "quill_mock_data.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quill_mock_data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
