[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quill-runtime"
version = "0.1.0"
description = "Quill Agent Runtime — loads agent prompts, calls the LLM, validates output, submits to the Approval Queue API."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Charles Mitchell" }]
dependencies = [
    "anthropic>=0.39",
    "jsonschema>=4.21",
    "pydantic>=2.5",
    "httpx>=0.26",
    "python-dotenv>=1.0",
    "click>=8.1",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
quill-runtime = "runtime.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
