[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quill-telegram-bot"
version = "0.1.0"
description = "Quill Telegram bot — mobile approvals + 7am ops digest"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Charles Mitchell" }]
dependencies = [
    "python-telegram-bot>=20.7",
    "httpx>=0.26",
    "websockets>=12.0",
    "apscheduler>=3.10",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "sentry-sdk>=1.40",
    "tzdata>=2023.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
quill-bot = "quill_bot.bot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["quill_bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
